// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with no expenses 1`] = `
<div>
  <p>
    Nothing to see here!
  </p>
</div>
`;

exports[`should render ExpenseSummary with one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling
     
    1,95 kr
  </p>
</div>
`;

exports[`should render ExpenseSummary with several expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling
     
    1 141,95 kr
  </p>
</div>
`;
